bison/ns_lexer.output
Grammar

    0 $accept: program $end

    1 program: statement

    2 statement: expression_statement
    3          | selection_statement
    4          | labeled_statement
    5          | iteration_statement
    6          | declaration_statement
    7          | jump_statement

    8 labeled_statement: CASE literal COLON statement EOL
    9                  | DEFAULT COLON statement EOL

   10 iteration_statement: WHILE expression OPEN_BRACE statement CLOSE_BRACE EOL
   11                    | DO OPEN_BRACE statement CLOSE_BRACE WHILE expression EOL
   12                    | FOR IDENTIFIER INT TO INT OPEN_BRACE statement CLOSE_BRACE EOL
   13                    | FOR IDENTIFIER type_declaration IN IDENTIFIER OPEN_BRACE statement CLOSE_BRACE EOL

   14 selection_statement: IF expression OPEN_BRACE statement CLOSE_BRACE EOL
   15                    | IF expression OPEN_BRACE statement CLOSE_BRACE ELSE OPEN_BRACE statement CLOSE_BRACE EOL
   16                    | SWITCH expression OPEN_BRACE statement CLOSE_BRACE

   17 expression_statement: EOL
   18                     | OPEN_BRACE expression CLOSE_BRACE EOL

   19 declaration_statement: fn_declaration
   20                      | struct_declaration
   21                      | variable_declaration

   22 jump_statement: RETURN expression EOL
   23               | BREAK EOL
   24               | CONTINUE EOL

   25 variable_declaration: type_qualifier IDENTIFIER type_declaration
   26                     | type_qualifier IDENTIFIER type_declaration ASSIGN expression
   27                     | type_qualifier IDENTIFIER type_declaration ASSIGN lambda_declaration

   28 type: I8
   29     | I16
   30     | I32
   31     | I64
   32     | U8
   33     | U16
   34     | U32
   35     | U64
   36     | F32
   37     | F64
   38     | BOOL
   39     | BYTE
   40     | STR
   41     | IDENTIFIER

   42 type_declaration: /* empty */
   43                 | COLON type

   44 type_qualifier: CONST
   45               | LET

   46 assignment_operator: ASSIGN
   47                    | ADD_ASSIGN
   48                    | SUB_ASSIGN
   49                    | MUL_ASSIGN
   50                    | DIV_ASSIGN
   51                    | MOD_ASSIGN
   52                    | BIT_AND_ASSIGN
   53                    | BIT_OR_ASSIGN
   54                    | BIT_XOR_ASSIGN
   55                    | BIT_SHL_ASSIGN
   56                    | BIT_SHR_ASSIGN

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression LOGIC_OR logical_and_expression

   61 logical_and_expression: inclusive_or_expression
   62                       | logical_and_expression LOGIC_AND inclusive_or_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression OR exclusive_or_expression

   65 exclusive_or_expression: and_expression
   66                        | exclusive_or_expression XOR and_expression

   67 and_expression: equality_expression
   68               | and_expression AND equality_expression

   69 equality_expression: relational_expression
   70                    | equality_expression EQ relational_expression
   71                    | equality_expression NE relational_expression

   72 relational_expression: shift_expression
   73                      | relational_expression LT shift_expression
   74                      | relational_expression GT shift_expression
   75                      | relational_expression LE shift_expression
   76                      | relational_expression GE shift_expression

   77 shift_expression: additive_expression
   78                 | shift_expression SHL additive_expression
   79                 | shift_expression SHR additive_expression

   80 additive_expression: multiplicative_expression
   81                    | additive_expression ADD multiplicative_expression
   82                    | additive_expression SUB multiplicative_expression

   83 multiplicative_expression: unary_expression
   84                          | multiplicative_expression MUL unary_expression
   85                          | multiplicative_expression DIV unary_expression
   86                          | multiplicative_expression MOD unary_expression

   87 unary_expression: postfix_expression
   88                 | unary_operator unary_expression
   89                 | AWAIT unary_expression

   90 unary_operator: AND
   91               | MUL
   92               | ADD
   93               | SUB
   94               | BIT_INV
   95               | NOT

   96 postfix_expression: primary_expression
   97                   | postfix_expression OPEN_PAREN CLOSE_PAREN
   98                   | postfix_expression OPEN_PAREN assignment_expression CLOSE_PAREN
   99                   | postfix_expression OPEN_BRACKET expression CLOSE_BRACKET
  100                   | postfix_expression DOT IDENTIFIER
  101                   | postfix_expression AS type

  102 primary_expression: literal
  103                   | IDENTIFIER
  104                   | OPEN_PAREN expression CLOSE_PAREN

  105 literal: INT
  106        | DOUBLE
  107        | STRING
  108        | TRUE
  109        | FALSE
  110        | NIL

  111 expression: assignment_expression
  112           | expression COMMA assignment_expression

  113 assignment_expression: conditional_expression
  114                      | unary_expression assignment_operator assignment_expression

  115 fn_qualifier: /* empty */
  116             | ASYNC

  117 fn_declaration: fn_qualifier FN IDENTIFIER OPEN_PAREN parameters CLOSE_PAREN type_declaration OPEN_BRACE statement CLOSE_BRACE EOL

  118 lambda_declaration: OPEN_BRACE OPEN_PAREN parameters CLOSE_PAREN type_declaration IN statement CLOSE_BRACE

  119 parameters: parameters COMMA parameter
  120           | parameter

  121 parameter_qualifier: /* empty */
  122                    | REF

  123 parameter: /* empty */
  124          | parameter_qualifier IDENTIFIER type_declaration

  125 struct_declaration: STRUCT IDENTIFIER OPEN_BRACE struct_fields CLOSE_BRACE EOL

  126 struct_fields: struct_fields EOL struct_field
  127              | struct_field

  128 struct_field: /* empty */
  129             | IDENTIFIER COLON type


Terminals, with rules where they appear

$end (0) 0
error (256)
LET (258) 45
CONST (259) 44
FN (260) 117
REF (261) 122
STRUCT (262) 125
ASYNC (263) 116
AWAIT (264) 89
AS (265) 101
IF (266) 14 15
ELSE (267) 15
DO (268) 11
TO (269) 12
WHILE (270) 10 11
FOR (271) 12 13
IN (272) 13 118
RETURN (273) 22
BREAK (274) 23
CONTINUE (275) 24
TRUE (276) 108
FALSE (277) 109
NIL (278) 110
SWITCH (279) 16
CASE (280) 8
DEFAULT (281) 9
I8 (282) 28
I16 (283) 29
I32 (284) 30
I64 (285) 31
U8 (286) 32
U16 (287) 33
U32 (288) 34
U64 (289) 35
F32 (290) 36
F64 (291) 37
BOOL (292) 38
BYTE (293) 39
STR (294) 40
ADD (295) 81 92
SUB (296) 82 93
MUL (297) 84 91
DIV (298) 85
MOD (299) 86
BIT_INV (300) 94
NOT (301) 95
AND (302) 68 90
OR (303) 64
XOR (304) 66
SHL (305) 78
SHR (306) 79
LOGIC_AND (307) 62
LOGIC_OR (308) 60
EQ (309) 70
NE (310) 71
LT (311) 73
GT (312) 74
LE (313) 75
GE (314) 76
ASSIGN (315) 26 27 46
ADD_ASSIGN (316) 47
SUB_ASSIGN (317) 48
MUL_ASSIGN (318) 49
DIV_ASSIGN (319) 50
MOD_ASSIGN (320) 51
BIT_AND_ASSIGN (321) 52
BIT_OR_ASSIGN (322) 53
BIT_XOR_ASSIGN (323) 54
BIT_SHL_ASSIGN (324) 55
BIT_SHR_ASSIGN (325) 56
OPEN_PAREN (326) 97 98 104 117 118
CLOSE_PAREN (327) 97 98 104 117 118
OPEN_BRACE (328) 10 11 12 13 14 15 16 18 117 118 125
CLOSE_BRACE (329) 10 11 12 13 14 15 16 18 117 118 125
OPEN_BRACKET (330) 99
CLOSE_BRACKET (331) 99
COMMA (332) 112 119
COLON (333) 8 9 43 58 129
QUESTION_MARK (334) 58
DOT (335) 100
EOL (336) 8 9 10 11 12 13 14 15 17 18 22 23 24 117 125 126
IDENTIFIER (337) 12 13 25 26 27 41 100 103 117 124 125 129
INT (338) 12 105
DOUBLE (339) 106
STRING (340) 107


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
program (87)
    on left: 1, on right: 0
statement (88)
    on left: 2 3 4 5 6 7, on right: 1 8 9 10 11 12 13 14 15 16 117
    118
labeled_statement (89)
    on left: 8 9, on right: 4
iteration_statement (90)
    on left: 10 11 12 13, on right: 5
selection_statement (91)
    on left: 14 15 16, on right: 3
expression_statement (92)
    on left: 17 18, on right: 2
declaration_statement (93)
    on left: 19 20 21, on right: 6
jump_statement (94)
    on left: 22 23 24, on right: 7
variable_declaration (95)
    on left: 25 26 27, on right: 21
type (96)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41,
    on right: 43 101 129
type_declaration (97)
    on left: 42 43, on right: 13 25 26 27 117 118 124
type_qualifier (98)
    on left: 44 45, on right: 25 26 27
assignment_operator (99)
    on left: 46 47 48 49 50 51 52 53 54 55 56, on right: 114
conditional_expression (100)
    on left: 57 58, on right: 58 113
logical_or_expression (101)
    on left: 59 60, on right: 57 58 60
logical_and_expression (102)
    on left: 61 62, on right: 59 60 62
inclusive_or_expression (103)
    on left: 63 64, on right: 61 62 64
exclusive_or_expression (104)
    on left: 65 66, on right: 63 64 66
and_expression (105)
    on left: 67 68, on right: 65 66 68
equality_expression (106)
    on left: 69 70 71, on right: 67 68 70 71
relational_expression (107)
    on left: 72 73 74 75 76, on right: 69 70 71 73 74 75 76
shift_expression (108)
    on left: 77 78 79, on right: 72 73 74 75 76 78 79
additive_expression (109)
    on left: 80 81 82, on right: 77 78 79 81 82
multiplicative_expression (110)
    on left: 83 84 85 86, on right: 80 81 82 84 85 86
unary_expression (111)
    on left: 87 88 89, on right: 83 84 85 86 88 89 114
unary_operator (112)
    on left: 90 91 92 93 94 95, on right: 88
postfix_expression (113)
    on left: 96 97 98 99 100 101, on right: 87 97 98 99 100 101
primary_expression (114)
    on left: 102 103 104, on right: 96
literal (115)
    on left: 105 106 107 108 109 110, on right: 8 102
expression (116)
    on left: 111 112, on right: 10 11 14 15 16 18 22 26 58 99 104 112
assignment_expression (117)
    on left: 113 114, on right: 98 111 112 114
fn_qualifier (118)
    on left: 115 116, on right: 117
fn_declaration (119)
    on left: 117, on right: 19
lambda_declaration (120)
    on left: 118, on right: 27
parameters (121)
    on left: 119 120, on right: 117 118 119
parameter_qualifier (122)
    on left: 121 122, on right: 124
parameter (123)
    on left: 123 124, on right: 119 120
struct_declaration (124)
    on left: 125, on right: 20
struct_fields (125)
    on left: 126 127, on right: 125 126
struct_field (126)
    on left: 128 129, on right: 126 127


state 0

    0 $accept: . program $end

    LET         shift, and go to state 1
    CONST       shift, and go to state 2
    STRUCT      shift, and go to state 3
    ASYNC       shift, and go to state 4
    IF          shift, and go to state 5
    DO          shift, and go to state 6
    WHILE       shift, and go to state 7
    FOR         shift, and go to state 8
    RETURN      shift, and go to state 9
    BREAK       shift, and go to state 10
    CONTINUE    shift, and go to state 11
    SWITCH      shift, and go to state 12
    CASE        shift, and go to state 13
    DEFAULT     shift, and go to state 14
    OPEN_BRACE  shift, and go to state 15
    EOL         shift, and go to state 16

    $default  reduce using rule 115 (fn_qualifier)

    program                go to state 17
    statement              go to state 18
    labeled_statement      go to state 19
    iteration_statement    go to state 20
    selection_statement    go to state 21
    expression_statement   go to state 22
    declaration_statement  go to state 23
    jump_statement         go to state 24
    variable_declaration   go to state 25
    type_qualifier         go to state 26
    fn_qualifier           go to state 27
    fn_declaration         go to state 28
    struct_declaration     go to state 29


state 1

   45 type_qualifier: LET .

    $default  reduce using rule 45 (type_qualifier)


state 2

   44 type_qualifier: CONST .

    $default  reduce using rule 44 (type_qualifier)


state 3

  125 struct_declaration: STRUCT . IDENTIFIER OPEN_BRACE struct_fields CLOSE_BRACE EOL

    IDENTIFIER  shift, and go to state 30


state 4

  116 fn_qualifier: ASYNC .

    $default  reduce using rule 116 (fn_qualifier)


state 5

   14 selection_statement: IF . expression OPEN_BRACE statement CLOSE_BRACE EOL
   15                    | IF . expression OPEN_BRACE statement CLOSE_BRACE ELSE OPEN_BRACE statement CLOSE_BRACE EOL

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 62
    assignment_expression      go to state 63


state 6

   11 iteration_statement: DO . OPEN_BRACE statement CLOSE_BRACE WHILE expression EOL

    OPEN_BRACE  shift, and go to state 64


state 7

   10 iteration_statement: WHILE . expression OPEN_BRACE statement CLOSE_BRACE EOL

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 65
    assignment_expression      go to state 63


state 8

   12 iteration_statement: FOR . IDENTIFIER INT TO INT OPEN_BRACE statement CLOSE_BRACE EOL
   13                    | FOR . IDENTIFIER type_declaration IN IDENTIFIER OPEN_BRACE statement CLOSE_BRACE EOL

    IDENTIFIER  shift, and go to state 66


state 9

   22 jump_statement: RETURN . expression EOL

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 67
    assignment_expression      go to state 63


state 10

   23 jump_statement: BREAK . EOL

    EOL  shift, and go to state 68


state 11

   24 jump_statement: CONTINUE . EOL

    EOL  shift, and go to state 69


state 12

   16 selection_statement: SWITCH . expression OPEN_BRACE statement CLOSE_BRACE

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 70
    assignment_expression      go to state 63


state 13

    8 labeled_statement: CASE . literal COLON statement EOL

    TRUE    shift, and go to state 32
    FALSE   shift, and go to state 33
    NIL     shift, and go to state 34
    INT     shift, and go to state 43
    DOUBLE  shift, and go to state 44
    STRING  shift, and go to state 45

    literal  go to state 71


state 14

    9 labeled_statement: DEFAULT . COLON statement EOL

    COLON  shift, and go to state 72


state 15

   18 expression_statement: OPEN_BRACE . expression CLOSE_BRACE EOL

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 73
    assignment_expression      go to state 63


state 16

   17 expression_statement: EOL .

    $default  reduce using rule 17 (expression_statement)


state 17

    0 $accept: program . $end

    $end  shift, and go to state 74


state 18

    1 program: statement .

    $default  reduce using rule 1 (program)


state 19

    4 statement: labeled_statement .

    $default  reduce using rule 4 (statement)


state 20

    5 statement: iteration_statement .

    $default  reduce using rule 5 (statement)


state 21

    3 statement: selection_statement .

    $default  reduce using rule 3 (statement)


state 22

    2 statement: expression_statement .

    $default  reduce using rule 2 (statement)


state 23

    6 statement: declaration_statement .

    $default  reduce using rule 6 (statement)


state 24

    7 statement: jump_statement .

    $default  reduce using rule 7 (statement)


state 25

   21 declaration_statement: variable_declaration .

    $default  reduce using rule 21 (declaration_statement)


state 26

   25 variable_declaration: type_qualifier . IDENTIFIER type_declaration
   26                     | type_qualifier . IDENTIFIER type_declaration ASSIGN expression
   27                     | type_qualifier . IDENTIFIER type_declaration ASSIGN lambda_declaration

    IDENTIFIER  shift, and go to state 75


state 27

  117 fn_declaration: fn_qualifier . FN IDENTIFIER OPEN_PAREN parameters CLOSE_PAREN type_declaration OPEN_BRACE statement CLOSE_BRACE EOL

    FN  shift, and go to state 76


state 28

   19 declaration_statement: fn_declaration .

    $default  reduce using rule 19 (declaration_statement)


state 29

   20 declaration_statement: struct_declaration .

    $default  reduce using rule 20 (declaration_statement)


state 30

  125 struct_declaration: STRUCT IDENTIFIER . OPEN_BRACE struct_fields CLOSE_BRACE EOL

    OPEN_BRACE  shift, and go to state 77


state 31

   89 unary_expression: AWAIT . unary_expression

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    unary_expression    go to state 78
    unary_operator      go to state 58
    postfix_expression  go to state 59
    primary_expression  go to state 60
    literal             go to state 61


state 32

  108 literal: TRUE .

    $default  reduce using rule 108 (literal)


state 33

  109 literal: FALSE .

    $default  reduce using rule 109 (literal)


state 34

  110 literal: NIL .

    $default  reduce using rule 110 (literal)


state 35

   92 unary_operator: ADD .

    $default  reduce using rule 92 (unary_operator)


state 36

   93 unary_operator: SUB .

    $default  reduce using rule 93 (unary_operator)


state 37

   91 unary_operator: MUL .

    $default  reduce using rule 91 (unary_operator)


state 38

   94 unary_operator: BIT_INV .

    $default  reduce using rule 94 (unary_operator)


state 39

   95 unary_operator: NOT .

    $default  reduce using rule 95 (unary_operator)


state 40

   90 unary_operator: AND .

    $default  reduce using rule 90 (unary_operator)


state 41

  104 primary_expression: OPEN_PAREN . expression CLOSE_PAREN

    AWAIT       shift, and go to state 31
    TRUE        shift, and go to state 32
    FALSE       shift, and go to state 33
    NIL         shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    MUL         shift, and go to state 37
    BIT_INV     shift, and go to state 38
    NOT         shift, and go to state 39
    AND         shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INT         shift, and go to state 43
    DOUBLE      shift, and go to state 44
    STRING      shift, and go to state 45

    conditional_expression     go to state 46
    logical_or_expression      go to state 47
    logical_and_expression     go to state 48
    inclusive_or_expression    go to state 49
    exclusive_or_expression    go to state 50
    and_expression             go to state 51
    equality_expression        go to state 52
    relational_expression      go to state 53
    shift_expression           go to state 54
    additive_expression        go to state 55
    multiplicative_expression  go to state 56
    unary_expression           go to state 57
    unary_operator             go to state 58
    postfix_expression         go to state 59
    primary_expression         go to state 60
    literal                    go to state 61
    expression                 go to state 79
    assignment_expression      go to state 63


state 42

  103 primary_expression: IDENTIFIER .

    $default  reduce using rule 103 (primary_expression)


state 43

  105 literal: INT .

    $default  reduce using rule 105 (literal)


state 44

  106 literal: DOUBLE .

    $default  reduce using rule 106 (literal)


state 45

  107 literal: STRING .

    $default  reduce using rule 107 (literal)


state 46

  113 assignment_expression: conditional_expression .

    $default  reduce using rule 113 (assignment_expression)


state 47

   57 conditional_expression: logical_or_expression .
   58                       | logical_or_expression . QUESTION_MARK expression COLON conditional_expression
   60 logical_or_expression: logical_or_expression . LOGIC_OR logical_and_expression

    LOGIC_OR       shift, and go to state 80
    QUESTION_MARK  shift, and go to state 81

    $default  reduce using rule 57 (conditional_expression)


state 48

   59 logical_or_expression: logical_and_expression .
   62 logical_and_expression: logical_and_expression . LOGIC_AND inclusive_or_expression

    LOGIC_AND  shift, and go to state 82

    $default  reduce using rule 59 (logical_or_expression)


state 49

   61 logical_and_expression: inclusive_or_expression .
   64 inclusive_or_expression: inclusive_or_expression . OR exclusive_or_expression

    OR  shift, and go to state 83

    $default  reduce using rule 61 (logical_and_expression)


state 50

   63 inclusive_or_expression: exclusive_or_expression .
   66 exclusive_or_expression: exclusive_or_expression . XOR and_expression

    XOR  shift, and go to state 84

    $default  reduce using rule 63 (inclusive_or_expression)


state 51

   65 exclusive_or_expression: and_expression .
   68 and_expression: and_expression . AND equality_expression

    AND  shift, and go to state 85

    $default  reduce using rule 65 (exclusive_or_expression)


state 52

   67 and_expression: equality_expression .
   70 equality_expression: equality_expression . EQ relational_expression
   71                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 86
    NE  shift, and go to state 87

    $default  reduce using rule 67 (and_expression)


state 53

   69 equality_expression: relational_expression .
   73 relational_expression: relational_expression . LT shift_expression
   74                      | relational_expression . GT shift_expression
   75                      | relational_expression . LE shift_expression
   76                      | relational_expression . GE shift_expression

    LT  shift, and go to state 88
    GT  shift, and go to state 89
    LE  shift, and go to state 90
    GE  shift, and go to state 91

    $default  reduce using rule 69 (equality_expression)


state 54

   72 relational_expression: shift_expression .
   78 shift_expression: shift_expression . SHL additive_expression
   79                 | shift_expression . SHR additive_expression

    SHL  shift, and go to state 92
    SHR  shift, and go to state 93

    $default  reduce using rule 72 (relational_expression)


state 55

   77 shift_expression: additive_expression .
   81 additive_expression: additive_expression . ADD multiplicative_expression
   82                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 94
    SUB  shift, and go to state 95

    $default  reduce using rule 77 (shift_expression)


state 56

   80 additive_expression: multiplicative_expression .
   84 multiplicative_expression: multiplicative_expression . MUL unary_expression
   85                          | multiplicative_expression . DIV unary_expression
   86                          | multiplicative_expression . MOD unary_expression
